styles/Home.module.scss
@use '@styles/colors';

$breakpoint-desktop: 800px;

.container {
  padding-inline: 2rem;
  background-color: #f5f5f5;
}

.main {
  @media (min-width: $breakpoint-desktop) {
    display: grid;
    grid-template-columns: 300px 1fr;
    grid-template-areas: 'SIDEBAR CONTENT';
    align-items: start;
    gap: 1rem;
    max-width: 1024px;
    margin-inline: auto;
  }
}

.header {
  grid-area: SIDEBAR;
  text-align: center;

  @media (min-width: $breakpoint-desktop) {
    position: sticky;
    top: 2rem;
    text-align: left;
  }
}

.navigation {
  padding-block: 1rem;
  border-block: solid 1px hsl(0% 0% 0% / 12%);
  margin-block: 2rem;
  text-align: left;

  & ul {
    margin: 0;
    padding: 0;

    & ul {
      padding-inline-start: 1.5rem;
      font-weight: 100;
      margin-block: 0.25rem;
    }
  }

  & li {
    display: block;
    padding: 0;
    line-height: 1.5rem;

    & + li {
      margin-block-start: 0.25rem;
    }
  }

  & a {
    color: colors.$primary-500;
  }

  @media (min-width: $breakpoint-desktop) {
    & a {
      color: inherit;

      &:hover {
        color: colors.$primary-500;
      }
    }
  }
}

.logo {
  max-width: clamp(150px, 60vw, 300px);
  @media (min-width: $breakpoint-desktop) {
    width: 200px;
  }
}

.title {
  font-size: clamp(1.5rem, 5vw, 3rem);

  @media (min-width: $breakpoint-desktop) {
    font-size: 1.5rem;
  }
}

.content {
  & p:first-of-type {
    font-size: 1.125rem;
  }

  & h2 {
    margin-block-start: 4rem;
    & + h3 {
      margin-block-start: 2rem;
    }
  }

  & h3 {
    margin-block-start: 4rem;
  }

  & :is(h2, h3) a {
    display: inline-flex;
    align-items: center;
    gap: 0.25rem;
    border-bottom: 1px dotted transparent;

    &::after {
      content: '';
      display: inline-block;
      height: 1em;
      aspect-ratio: 1;
      background-image: url('/icons/Link.svg');
      opacity: 0;
    }

    &:hover {
      justify-content: start;
      border-bottom-color: colors.$grey-300;
      &::after {
        opacity: 1;
      }
    }
  }

  & h6 {
    font-size: 0.75rem;
    color: colors.$grey-500;
    margin-block-end: 0.75rem;
  }

  & pre {
    border-radius: 5px;
  }

  @media (min-width: $breakpoint-desktop) {
    display: grid;
    background-color: colors.$white;
    padding: 1.5rem;
    margin-block: 2rem;
    box-shadow: 0px 1px 1px colors.$black-a-20;
  }
}

.badge {
  background-color: colors.$grey-300;
  padding-inline: 0.5em;
  padding-block: 0.25em;
  border-radius: 5px;
  color: colors.$white;
  font-size: 0.8em;
}

